# physical-AI-interpretability

./: .envrc.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: docs.yml  publish-pypi.yml
docs/: Makefile  validation_guide.md
docs/source/: conf.py  index.rst  modules.rst  physical_ai_interpretability.attention_maps.rst  physical_ai_interpretability.ood.rst  physical_ai_interpretability.rst  physical_ai_interpretability.sae.rst  physical_ai_interpretability.utils.rst  src.attention_maps.act_attention_mapper.rst  src.attention_maps.rst  src.ood.ood_detector.rst  src.ood.rst  src.rst  src.sae.activation_collector.rst  src.sae.builder.rst  src.sae.config.rst  src.sae.rst  src.sae.sae.rst  src.sae.token_sampler.rst  src.sae.trainer.rst  src.utils.dataset_factory.rst  src.utils.naming.rst  src.utils.rst
examples/: encode_video.py  usage_with_act.py  visualise_original_data_attention.py  visualise_original_data_gradient_saliency.py
examples/features_huggingface_space/: README.md  requirements.txt  ui.py
physical_ai_interpretability/: __init__.py
physical_ai_interpretability/attention_maps/: __init__.py  act_attention_mapper.py  act_gradient_saliency_mapper.py
physical_ai_interpretability/ood/: __init__.py  ood_detector.py
physical_ai_interpretability/sae/: __init__.py  activation_collector.py  builder.py  config.py  trainer.py
physical_ai_interpretability/utils/: dataset_factory.py  naming.py
scripts/: ab_test_attention.py  analyse_features.ipynb  demo_ood_detector.py  example_usage.sh  push_model_to_hub.py  record_feature_activations.py  run_validation.py  setup_validation.sh  synthetic_attention_tests.py  train_sae.py  validate_attention_improvements.py  view_results.py
src/: __init__.py  act_attention_mapper.py
src/attention_maps/: __init__.py  act_attention_mapper.py
src/feature_extraction/: __init__.py  activation_collector.py  sae.py  token_sampler.py
src/ood/: __init__.py  ood_detector.py
src/sae/: __init__.py  activation_collector.py  builder.py  config.py  sae.py  token_sampler.py  trainer.py
src/utils/: __init__.py  dataset_factory.py  naming.py
